margin fix on small mobile tiles

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -127,5 +127,6 @@ body {
 	.row-fluid .span1 {
 		display: inline-block;
 		width: 15%;
+		margin: .5px;
 	}
 }
